--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "softcorp",
+  "name": "AlexanderM",
   "version": "0.0.1",
-  "description": "SoftCorp is a company to support you creating applications, websites and hosting solutions. The future is now. Contact Us.",
-  "productName": "SoftCorp | applications, websites and hosting solutions",
+  "description": "AlexanderM is a company to support you creating applications, websites and hosting solutions. The future is now. Contact Us.",
+  "productName": "AlexanderM | applications, websites and hosting solutions",
   "author": "John A. Martinez <52513621+AlexanderM1927@users.noreply.github.com>",
   "private": true,
   "scripts": {
